tests/dim1.err
20 DIM A
        ^
Error: array name and dimensions expected: A
